--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<h1>
       Witaj na mojej stronie
     </h1>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script type="text/javascript" src="js/promt_function.js"></script>
 </body>
 </html>
